--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.13",
@@ -18,6 +19,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
